# AI-Agents-Langchain-Najoua

./: README.md  app.py  multimodal_app.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
chroma_db_multimodal/: chroma.sqlite3
notebooks/: tp2_rag.ipynb
