[project]
name = "tp2-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.0.0",
    "notebook>=7.5.5",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "tiktoken>=0.12.0",
    "unstructured>=0.22.12",
]
